# IMDB-text-classification-using-MLOps

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  logger.py  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  make.bat
flask_app/: app.py
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
scripts/: promote_model.py
src/connections/: s3_connection.py  ssms_connection.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py
src/model/: model_building.py  model_evaluation.py  model_registry.py
tests/: test_model.py
