[project]
name = "imdb-text-classification-using-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3<1.42.50",
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.6",
    "dvc>=3.66.1",
    "mlflow>=3.9.0",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]